--- a/drivers/md/bcache/Makefile
+++ b/drivers/md/bcache/Makefile
@@ -2,7 +2,7 @@
 obj-$(CONFIG_BCACHE)	+= bcache.o
 
 bcache-y		:= alloc.o bset.o btree.o debug.o dirent.o extents.o\
-	inode.o io.o journal.o movinggc.o request.o stats.o super.o sysfs.o\
-	trace.o util.o writeback.o
+	fs.o inode.o io.o journal.o movinggc.o request.o stats.o super.o\
+	sysfs.o trace.o util.o writeback.o
 
 CFLAGS_request.o	+= -Iblock
